# advent-of-code

./: .gitignore  README.md  build.gradle  settings.gradle
client/: package.json
client/config/: paths.js  webpack.config.dev.js  webpack.config.prod.js
client/src/: index.js  index.scss  store.js
client/src/components/Answer/: index.js
client/src/components/App/: index.js
client/src/components/Content/: index.js
client/src/components/Header/: index.js  index.scss
client/src/reducers/: index.js
client/src/reducers/Answers/: index.js
client/src/reducers/Common/: index.js
client/src/style/: _base.scss
gradle/wrapper/: gradle-wrapper.properties
mikepoirier/2022/rust/day-01/src/: lib.rs
mikepoirier/2022/rust/day-02/src/: lib.rs
mikepoirier/2023/rust/aoc-2023/: Cargo.toml  dhat-heap.json  maskfile.md
mikepoirier/2023/rust/aoc-2023/day-01/: Cargo.toml
mikepoirier/2023/rust/aoc-2023/day-01/benches/: benchmark.rs
mikepoirier/2023/rust/aoc-2023/day-01/src/: error.rs  lib.rs
mikepoirier/2023/rust/aoc-2023/day-02/: Cargo.toml
mikepoirier/2023/rust/aoc-2023/day-02/benches/: benchmark.rs
mikepoirier/2023/rust/aoc-2023/day-02/src/: error.rs  lib.rs
mikepoirier/2023/rust/aoc-2023/day-03/: Cargo.toml
mikepoirier/2023/rust/aoc-2023/day-03/benches/: benchmark.rs
mikepoirier/2023/rust/aoc-2023/day-03/src/: lib.rs
mikepoirier/2023/rust/aoc-2023/day-04/: Cargo.toml
mikepoirier/2023/rust/aoc-2023/day-04/benches/: benchmark.rs
mikepoirier/2023/rust/aoc-2023/day-04/src/: error.rs  lib.rs
mikepoirier/2023/rust/aoc-2023/input/: Cargo.toml
mikepoirier/2023/rust/aoc-2023/input/src/: error.rs  lib.rs  main.rs
mikepoirier/2023/rust/aoc-2023/src/: error.rs  input.rs  lib.rs  main.rs
mikepoirier/2023/rust/aoc-2023/src/days/: day01.rs  day02.rs  day03.rs  mod.rs
server/: build.gradle
server/src/main/kotlin/io/mikepoirier/adventofcode/: AdventofcodeApplication.kt  Model.kt
server/src/main/resources/: application.yml
(+8 files in other folders)
