# [package]
# name = "aoc-2023"
# version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

members = ["day-*", "input"]

[workspace.dependencies]
clap = { version = "4.4.10", features = ["derive"] }
dhat = "0.3.2"
dirs = "5.0.1"
divan = "0.1.5"
input = { path = "input" }
nom = "7.1.3"
thiserror = "1.0.50"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1
