[package]
name = "day-03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat.workspace = true
divan.workspace = true
input.workspace = true
thiserror.workspace = true

[[bench]]
name = "day-03"
path = "benches/benchmark.rs"
harness = false

[features]
dhat-heap = []
