[package]
name = "day-04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat.workspace = true
divan.workspace = true
input.workspace = true
nom.workspace = true
thiserror.workspace = true

[[bench]]
name = "day-04"
path = "benches/benchmark.rs"
harness = false

[features]
dhat-heap = []
